<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/history"
        android:title="@string/history" />
    <item android:id="@+id/favourites"
        android:title="@string/favourites"/>
    <item android:id="@+id/settings"
        android:title="@string/settings"/>
    <item android:id="@+id/help"
        android:title="@string/help"/>
    <item android:id="@+id/privacy_policy"
        android:title="@string/privacy_policy"/>
    <item android:id="@+id/about_us"
        android:title="@string/about_us"/>
    <item android:id="@+id/contact_us"
        android:title="@string/contact_us"/>
    <item android:id="@+id/log_out"
        android:title="@string/log_out"/>
</menu>
